Add basic random bot movement on grid

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <h1>yogo</h1>
 <canvas id="yogo" width="601" height="401"></canvas>
 <script src="data.js"></script>
+<script src="code/util.js"></script>
 <script src="code/draw.js"></script>
 <script src="code/tick.js"></script>
 <script src="code/init.js"></script>
