--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
 <body>
 <h1>yogo</h1>
 <canvas id="yogo" width="771" height="571"></canvas>
+<script src="libs/waapisim.js"></script>
 <script src="data.js"></script>
 <script src="code/util.js"></script>
+<script src="code/sound.js"></script>
 <script src="code/draw.js"></script>
 <script src="code/tick.js"></script>
 <script src="code/init.js"></script>
