Add level loading

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 <canvas id="yogo" width="771" height="571"></canvas>
 <script src="libs/waapisim.js"></script>
 <script src="data.js"></script>
+<script src="levels/level_1.js"></script>
+<script src="levels/level_2.js"></script>
+<script src="levels/level_end.js"></script>
 <script src="code/util.js"></script>
 <script src="code/sound.js"></script>
 <script src="code/draw.js"></script>
