Remember current level between refresh

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <body>
 <h1>yogo</h1>
 <canvas id="yogo" width="771" height="571"></canvas>
+<script src="libs/cookie.js"></script>
 <script src="libs/waapisim.js"></script>
 <script src="data.js"></script>
 <script src="levels/level_1.js"></script>
