Expand text system for tutorial

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <script src="data.js"></script>
 <script src="levels/level_1.js"></script>
 <script src="levels/level_2.js"></script>
+<script src="levels/level_3.js"></script>
 <script src="levels/level_end.js"></script>
 <script src="code/util.js"></script>
 <script src="code/sound.js"></script>
