--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>yogo</title>
+    <meta charset="utf-8">
     <link href="http://fonts.googleapis.com/css?family=Roboto+Slab:300" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -14,6 +15,8 @@
 <script src="levels/level_1.js"></script>
 <script src="levels/level_2.js"></script>
 <script src="levels/level_3.js"></script>
+<script src="levels/level_4.js"></script>
+<script src="levels/level_5.js"></script>
 <script src="levels/level_end.js"></script>
 <script src="code/util.js"></script>
 <script src="code/sound.js"></script>
