--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 <script src="levels/level_4.js"></script>
 <script src="levels/level_5.js"></script>
 <script src="levels/level_6.js"></script>
+<script src="levels/level_7.js"></script>
 <script src="levels/level_end.js"></script>
 <script src="code/util.js"></script>
 <script src="code/sound.js"></script>
