--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 <script src="levels/level_6.js"></script>
 <script src="levels/level_7.js"></script>
 <script src="levels/level_8.js"></script>
+<script src="levels/level_9.js"></script>
 <script src="levels/level_end.js"></script>
 <script src="code/util.js"></script>
 <script src="code/sound.js"></script>
