--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 <script src="levels/level_7.js"></script>
 <script src="levels/level_8.js"></script>
 <script src="levels/level_9.js"></script>
+<script src="levels/level_10.js"></script>
 <script src="levels/level_end.js"></script>
 <script src="code/util.js"></script>
 <script src="code/sound.js"></script>
