Rename and reorder levels

--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
 <script src="libs/cookie.js"></script>
 <script src="libs/waapisim.js"></script>
 <script src="data.js"></script>
-<script src="levels/level_1.js"></script>
-<script src="levels/level_2.js"></script>
-<script src="levels/level_3.js"></script>
-<script src="levels/level_4.js"></script>
-<script src="levels/level_5.js"></script>
-<script src="levels/level_6.js"></script>
-<script src="levels/level_7.js"></script>
-<script src="levels/level_8.js"></script>
-<script src="levels/level_9.js"></script>
-<script src="levels/level_10.js"></script>
-<script src="levels/level_end.js"></script>
+<script src="levels/tuto_1.js"></script>
+<script src="levels/tuto_2.js"></script>
+<script src="levels/tuto_3.js"></script>
+<script src="levels/tuto_4.js"></script>
+<script src="levels/city.js"></script>
+<script src="levels/snail.js"></script>
+<script src="levels/wall.js"></script>
+<script src="levels/fortress.js"></script>
+<script src="levels/corridor.js"></script>
+<script src="levels/zeta.js"></script>
+<script src="levels/the_end.js"></script>
 <script src="code/util.js"></script>
 <script src="code/sound.js"></script>
 <script src="code/draw.js"></script>
