Add guitar level

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 <script src="levels/wall.js"></script>
 <script src="levels/fortress.js"></script>
 <script src="levels/corridor.js"></script>
+<script src="levels/guitar.js"></script>
 <script src="levels/zeta.js"></script>
 <script src="levels/the_end.js"></script>
 <script src="code/util.js"></script>
