Added/updated polyfills to improve compastability
It's very slow but now it works in Opera.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <h1>yogo</h1>
 <canvas id="yogo" width="771" height="571"></canvas>
 <script src="libs/cookie.js"></script>
+<script src="libs/requestAnimationFrame.js"></script>
 <script src="libs/waapisim.js"></script>
 <script src="data.js"></script>
 <script src="levels/tuto_1.js"></script>
